--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ canvas {
 }
 
 .time {
-  color: #d99c3b;
+  color: #009ACD;
   text-transform: uppercase;
   display: flex;
   justify-content: center;
