--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ canvas {
 }
 
 .time {
-  color:#009ACD;
+  color:#3CB371;
   text-transform: uppercase;
   display: flex;
   justify-content: center;
